# egg-benchmark

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
benches/: basic_math.rs  basic_maths.rs  benchmarks.rs  calc_logic.rs  egraph.rs  prop_logic.rs
benches/customlang/: basic_maths.rs  calc_logic.rs  mod.rs  prop_logic.rs
benches/symbollang/: basic_maths.rs  calc_logic.rs  prop_logic.rs
scripts/: Project.toml  load_results.jl
src/: lib.rs  main.rs
tests/: matches.rs
