[package]
name = "egg_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
egg = "0.9.5"
log = "0.4.21"

[[bench]]
name = "prop_logic"
harness = false

[[bench]]
name = "basic_maths"
harness = false

[[bench]]
name = "calc_logic"
harness = false
